# py-balcalc

./: Manifest.in  README.md  pyproject.toml  requirements.txt  todo.md
.github/workflows/: python-publish-test.yml  python-publish.yml
py_balcalc/: __init__.py  logger.py  main.py  profile.py  profile.py.bak  settings.py  signals_manager.py  translator.py
py_balcalc/file/: __init__.py  file_worker.py
py_balcalc/qss/: application.qss  dialog.qss  profiles_table.qss
py_balcalc/resources/: __init__.py  resources.py  resources.qrc
py_balcalc/resources/qss/: application.qss
py_balcalc/translations/: English.json  Ukrainian.json
py_balcalc/ui/: message_handler.py  resources.py  stylesheet.py
py_balcalc/ui/calculator/: __init__.py  calculator.py
py_balcalc/ui/calculator/conditions/: __init__.py  conditions.py
py_balcalc/ui/calculator/table/: __init__.py  drag_table.py  trajectory_table.py
py_balcalc/ui/custom_widgets/: __init__.py  convertor.py  no_wheel_sb.py  spin_box_delegate.py  t_label.py  table_model.py  unit_sb.py  unit_spin_box.py  valid_line_edit.py
py_balcalc/ui/footer/: __init__.py  footer.py  ui.py
py_balcalc/ui/main_window/: data_worker.py  footer.py  main_window.py  ui.py
py_balcalc/ui/main_window/add_button/: __init__.py  add_button.py  ui.py
py_balcalc/ui/main_window/profile_a7p_meta/: prof_a7p_meta.py
py_balcalc/ui/main_window/profile_bullet/: prof_bullet.py
py_balcalc/ui/main_window/profile_cartridge/: prof_cartridge.py
py_balcalc/ui/main_window/profile_conditions/: __init__.py  prof_conditions.py
py_balcalc/ui/main_window/profile_current/: profile_current.py
py_balcalc/ui/main_window/profile_tab/: __init__.py  profile_tab.py  ui.py
py_balcalc/ui/main_window/profile_weapon/: prof_weapon.py
py_balcalc/ui/resources/: __init__.py  ballistic.py
py_balcalc/ui/settings/: __init__.py  settings.py  ui.py
resources/: ballistic.qrc
(+63 files in other folders)
